samples/_failures_safe/1761531460_bc5d61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b9e348d.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_7b9e348d.c:167:9: error: expected declaration or statement at end of input
  167 |         case TOKEN_NUMBER: printf("NUMBER"); break;
      |         ^~~~
./samples/SAFE/__tmp_7b9e348d.c:167:9: error: expected declaration or statement at end of input
